--- a/back_end/package.json
+++ b/back_end/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,8 +22,5 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
   }
 }
